@@ -1,5 +1,8 @@
 #!/usr/bin/make -f
 
+# Security Hardening
+export DEB_BUILD_MAINT_OPTIONS = hardening=+all
+DPKG_EXPORT_BUILDFLAGS = 1
 -include /usr/share/dpkg/buildtools.mk
 
 %:
@@ -8,7 +11,7 @@
 override_dh_auto_build:
 	docbook-to-man debian/connect-proxy.sgml > debian/connect-proxy.1
 	[ -d usr/bin ] || mkdir -p usr/bin
-	$(CC) -DSOCKLEN_T=socklen_t connect.c -o usr/bin/connect-proxy
+	$(CC) $(CPPFLAGS) $(CFLAGS) $(LDFLAGS) -DSOCKLEN_T=socklen_t connect.c -o usr/bin/connect-proxy
 
 override_dh_clean:
 	rm -rf usr
