@@ -9,6 +9,8 @@ connect-proxy (1.105-1.1) UNRELEASED; urgency=medium
   * debian/copyright:
     - Use secure copyright file specification URI.
     - Remove Makefile entry, which does not exist.
+  * debian/rules:
+    - Add security hardening.
 
   [ Helmut Grohne ]
   * Fix FTCBFS: (Closes: #901453)
